{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 146,
  "lineage": "8a539cba-a350-1e5c-37ea-5d308a0685ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "team-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f856fecf919a6f4",
            "association_id": "eipassoc-09ba53ca235cfe0c2",
            "domain": "vpc",
            "id": "eipalloc-08f856fecf919a6f4",
            "network_border_group": "us-west-2",
            "network_interface": "eni-06a32748e5d5d2fd4",
            "private_dns": "ip-10-0-2-229.us-west-2.compute.internal",
            "private_ip": "10.0.2.229",
            "public_dns": "ec2-52-33-180-170.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.180.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "team-eip"
            },
            "tags_all": {
              "Name": "team-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:883195043912:instance/i-05da2b4c1be2678d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05da2b4c1be2678d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "team",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0290d2e690bcb69e5",
            "private_dns": "ip-10-0-12-112.us-west-2.compute.internal",
            "private_ip": "10.0.12.112",
            "public_ip": "54.214.184.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075e43328a9884074",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0886761fad6ef960a",
            "tags": {
              "Name": "Jumpbox"
            },
            "tags_all": {
              "Name": "Jumpbox"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-020f4d8d6396f6e2c"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "team-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:internet-gateway/igw-0b2a7ac78cb8cdde1",
            "id": "igw-0b2a7ac78cb8cdde1",
            "owner_id": "883195043912",
            "tags": {
              "Name": "team-igw"
            },
            "tags_all": {
              "Name": "team-igw"
            },
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "team-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f856fecf919a6f4",
            "connectivity_type": "public",
            "id": "nat-0f79d7154d05d5597",
            "network_interface_id": "eni-06a32748e5d5d2fd4",
            "private_ip": "10.0.2.229",
            "public_ip": "52.33.180.170",
            "subnet_id": "subnet-0886761fad6ef960a",
            "tags": {
              "Name": "team-NAT"
            },
            "tags_all": {
              "Name": "team-NAT"
            }
          },
          "dependencies": [
            "aws_eip.team-eip",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:route-table/rtb-06cc1e4e94091850b",
            "id": "rtb-06cc1e4e94091850b",
            "owner_id": "883195043912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2a7ac78cb8cdde1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team-rt"
            },
            "tags_all": {
              "Name": "team-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.team-igw",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:route-table/rtb-061310b85c21a2bd1",
            "id": "rtb-061310b85c21a2bd1",
            "owner_id": "883195043912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f79d7154d05d5597",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team-rt-2"
            },
            "tags_all": {
              "Name": "team-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.team-eip",
            "aws_nat_gateway.team-nat",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077861952d0202a95",
            "route_table_id": "rtb-06cc1e4e94091850b",
            "subnet_id": "subnet-0886761fad6ef960a"
          },
          "dependencies": [
            "aws_internet_gateway.team-igw",
            "aws_route_table.team-rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03814734052e04c5e",
            "route_table_id": "rtb-06cc1e4e94091850b",
            "subnet_id": "subnet-0532407b2d4da332e"
          },
          "dependencies": [
            "aws_internet_gateway.team-igw",
            "aws_route_table.team-rt",
            "aws_subnet.public-subnet-2",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041058fd861bc2a78",
            "route_table_id": "rtb-06cc1e4e94091850b",
            "subnet_id": "subnet-04bb1243edfeef9b0"
          },
          "dependencies": [
            "aws_internet_gateway.team-igw",
            "aws_route_table.team-rt",
            "aws_subnet.public-subnet-3",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0606839c60c40127a",
            "route_table_id": "rtb-061310b85c21a2bd1",
            "subnet_id": "subnet-0498539c5be1e6f2e"
          },
          "dependencies": [
            "aws_eip.team-eip",
            "aws_nat_gateway.team-nat",
            "aws_route_table.team-rt-2",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9f5212b726ad3c7",
            "route_table_id": "rtb-061310b85c21a2bd1",
            "subnet_id": "subnet-0b32294cc582e74c2"
          },
          "dependencies": [
            "aws_eip.team-eip",
            "aws_nat_gateway.team-nat",
            "aws_route_table.team-rt-2",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:security-group/sg-020f4d8d6396f6e2c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020f4d8d6396f6e2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220317060638157100000001",
            "name_prefix": "terraform-",
            "owner_id": "883195043912",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-0498539c5be1e6f2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0498539c5be1e6f2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-Privatesubnet-1"
            },
            "tags_all": {
              "Name": "team-Privatesubnet-1"
            },
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-0b32294cc582e74c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b32294cc582e74c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-Privatesubnet-2"
            },
            "tags_all": {
              "Name": "team-Privatesubnet-2"
            },
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-0886761fad6ef960a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0886761fad6ef960a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-publicsubnet-1"
            },
            "tags_all": {
              "Name": "team-publicsubnet-1"
            },
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-0532407b2d4da332e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0532407b2d4da332e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-publicsubnet-2"
            },
            "tags_all": {
              "Name": "team-publicsubnet-2"
            },
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-04bb1243edfeef9b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bb1243edfeef9b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-publicsubnet-3"
            },
            "tags_all": {
              "Name": "team-publicsubnet-3"
            },
            "vpc_id": "vpc-07343ec6f1ae9b27e"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "team-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:vpc/vpc-07343ec6f1ae9b27e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0119f40369a693fe7",
            "default_route_table_id": "rtb-07d38f8bc55bb339f",
            "default_security_group_id": "sg-0deb68c99d81745fa",
            "dhcp_options_id": "dopt-e591909d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07343ec6f1ae9b27e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d38f8bc55bb339f",
            "owner_id": "883195043912",
            "tags": {
              "Name": "team-vpc"
            },
            "tags_all": {
              "Name": "team-vpc"
            }
          }
        }
      ]
    }
  ]
}